force-app/main/default/objects/JT_SettingsAuditLog__c/JT_SettingsAuditLog__c.object-meta.xml
<CustomObject>
    <description
  >Audit log for tracking production editing setting changes</description>
    <label>Settings Audit Log</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settings Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>