force-app/main/default/objects/JT_SettingsAuditLog__c/fields/JT_Action__c.field-meta.xml
<CustomField>
    <fullName>JT_Action__c</fullName>
    <description
  >Action performed - flexible text to allow any audit message</description>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>