force-app/main/default/objects/JT_SettingsAuditLog__c/fields/JT_ChangedBy__c.field-meta.xml
<CustomField>
    <fullName>JT_ChangedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who made the change</description>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SettingsAuditLogs</relationshipName>
    <type>Lookup</type>
</CustomField>