force-app/main/default/objects/JT_SettingsAuditLog__c/fields/JT_ChangedByUsername__c.field-meta.xml
<CustomField>
    <fullName>JT_ChangedByUsername__c</fullName>
    <description>Username of the person who made the change</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>