force-app/main/default/objects/JT_SettingsAuditLog__c/fields/JT_IPAddress__c.field-meta.xml
<CustomField>
    <fullName>JT_IPAddress__c</fullName>
    <description>IP Address from which the change was made</description>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>