force-app/main/default/objects/JT_SettingsAuditLog__c/fields/JT_OrgType__c.field-meta.xml
<CustomField>
    <fullName>JT_OrgType__c</fullName>
    <description>Type of Salesforce org at time of change</description>
    <label>Org Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>