force-app/main/default/objects/JT_SettingsAuditLog__c/fields/JT_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>JT_Timestamp__c</fullName>
    <description>When the change was made</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>