force-app/main/default/objects/JT_SettingsAuditLog__c/listViews/All_logs.listView-meta.xml
<ListView>
    <fullName>All_logs</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All logs</label>
</ListView>